src/objects/c2g__codaTransactionLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptransaction</customHelpPage>
    <description>The line items on a transaction.</description>
    <fields>
        <fullName>Age_Analysis_Category__c</fullName>
        <formula>IF(ISPICKVAL(c2g__MatchingStatus__c,&quot;Matched&quot;),&quot;Matched&quot;, 
IF(TODAY() - c2g__DueDate__c&lt;=0,&quot;0-Current&quot;, 
IF(AND(30&gt;=TODAY() - c2g__DueDate__c,TODAY() - c2g__DueDate__c&gt;0),&quot;1-30 Days&quot;, 
IF(AND(60&gt;=TODAY() - c2g__DueDate__c,TODAY() - c2g__DueDate__c&gt;0),&quot;31-60 Days&quot;, 
IF(AND(90&gt;=TODAY() - c2g__DueDate__c,TODAY() - c2g__DueDate__c&gt;0),&quot;61-90 Days&quot;, 
IF(TODAY() -c2g__DueDate__c&gt;90, &quot;90 Days plus&quot;, &quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_Analysis_Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <formula>IF( c2g__HomeValue__c &lt; 0, ABS(c2g__HomeValue__c) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <formula>IF( c2g__HomeValue__c &gt; 0, c2g__HomeValue__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_1_Amount__c</fullName>
        <formula>c2g__Dimension1Value__c *-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Value_Amount__c</fullName>
        <formula>c2g__HomeValue__c *-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Value Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountRollup__c</fullName>
        <formula>IF( ISNULL( c2g__Transaction__r.c2g__Account__c ), &apos;False&apos;, &apos;True&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Rollup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTradingCurrencyMismatch__c</fullName>
        <formula>c2g__AccountCurrency__r.Name  &lt;&gt;  c2g__Account__r.c2g__CODAAccountTradingCurrency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Trading Currency Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AccountType__c</fullName>
        <formula>IF( c2g__Account__r.c2g__CODAIntercompanyAccount__c, &apos;Intercompany&apos;, IF(c2g__Account__r.c2g__CODAAccountsPayableControl__c = c2g__Account__r.c2g__CODAAccountsReceivableControl__c, &apos;Customer - Vendor&apos;, IF(c2g__Account__r.c2g__CODAAccountsPayableControl__c =  c2g__GeneralLedgerAccount__c , &apos;Vendor&apos;, IF ( c2g__Account__r.c2g__CODAAccountsReceivableControl__c = c2g__GeneralLedgerAccount__c, &apos;Customer&apos;, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountValue__c</fullName>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Reclassify Profits field is updated accordingly.</inlineHelpText>
        <label>Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfAgeBand__c</fullName>
        <formula>IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Max__c
), 
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Label__c,

IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Label__c,

IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Label__c,

null
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfAge__c</fullName>
        <formula>c2g__AsOfDate__c - IF( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeByDueDate__c, c2g__DueDate__c, c2g__Transaction__r.c2g__TransactionDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfDualValue__c</fullName>
        <label>As of Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfHomeValue__c</fullName>
        <label>As of Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfName__c</fullName>
        <label>As of Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Bank Account Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsBankAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliationStatus__c</fullName>
        <formula>IF( ISNULL( c2g__DateCanceled__c ), TEXT(c2g__BankReconciliation__r.c2g__ReconciliationStatus__c), &apos;Canceled&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Reconciliation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Category field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Activities</fullName>
                </value>
                <value>
                    <fullName>Investing Activities</fullName>
                </value>
                <value>
                    <fullName>Financing Activities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Cash Flow Adjustable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Line Summary field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Line Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(Gain) / Loss on Foreign Exchange</fullName>
                </value>
                <value>
                    <fullName>(Gain) / Loss on Investment Disposals</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Inventory</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Other Current Assets</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Receivables</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Depreciation &amp; Amortization</fullName>
                </value>
                <value>
                    <fullName>Dividends on Common Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends on Preference Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends Received</fullName>
                </value>
                <value>
                    <fullName>Impairment</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Common Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Long Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Other Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Payables</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Preference Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Short Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Purchase of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Purchase of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sale of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Sales Proceeds from Disposal of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Unrealized (Gain) / Loss on Foreign Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DateCanceled__c</fullName>
        <label>Date Canceled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DaysOverdue__c</fullName>
        <formula>IF(TODAY() - c2g__DueDate__c&lt;0,0,TODAY() - c2g__DueDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 1 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension1Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Value__c</fullName>
        <label>Dimension 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 2 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension2Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Value__c</fullName>
        <label>Dimension 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 3 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension3Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Value__c</fullName>
        <label>Dimension 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue1__c</fullName>
        <label>Discount Account Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue2__c</fullName>
        <label>Discount Account Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue3__c</fullName>
        <label>Discount Account Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate1__c</fullName>
        <label>Discount Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate2__c</fullName>
        <label>Discount Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate3__c</fullName>
        <label>Discount Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue1__c</fullName>
        <label>Discount Document Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue2__c</fullName>
        <label>Discount Document Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue3__c</fullName>
        <label>Discount Document Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDocumentCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentNumber__c</fullName>
        <formula>IF(c2g__Transaction__r.c2g__DocumentNumber__c &lt;&gt; null,if( BEGINS( c2g__Transaction__r.c2g__DocumentNumber__c , &quot;SIN&quot;) &amp;&amp; c2g__Transaction__r.c2g__SalesInvoice__c &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__SalesInvoice__c ,c2g__Transaction__r.c2g__DocumentNumber__c)  , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;SCR&quot;) &amp;&amp; c2g__Transaction__r.c2g__SalesCreditNote__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__SalesCreditNote__c ,c2g__Transaction__r.c2g__DocumentNumber__c) , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;CRV&quot;) &amp;&amp; c2g__Transaction__r.c2g__CurrencyRevaluation__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__CurrencyRevaluation__c ,c2g__Transaction__r.c2g__DocumentNumber__c) ,
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;PIN&quot;) &amp;&amp; c2g__Transaction__r.c2g__PayableInvoice__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__PayableInvoice__c ,c2g__Transaction__r.c2g__DocumentNumber__c) , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;PCR&quot;) &amp;&amp; c2g__Transaction__r.c2g__PayableCreditNote__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__PayableCreditNote__c ,c2g__Transaction__r.c2g__DocumentNumber__c) ,
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;JNL&quot;) &amp;&amp; c2g__Transaction__r.c2g__Journal__c  &lt;&gt; null , HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__Journal__c ,c2g__Transaction__r.c2g__DocumentNumber__c) , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;CSH&quot;) &amp;&amp; c2g__Transaction__r.c2g__CashEntry__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__CashEntry__c ,c2g__Transaction__r.c2g__DocumentNumber__c),c2g__Transaction__r.c2g__DocumentNumber__c)
)))))),&quot;&quot;)</formula>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingValue__c</fullName>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Document Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxTotal__c</fullName>
        <formula>c2g__DocumentTaxValue1__c + c2g__DocumentTaxValue2__c + c2g__DocumentTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue1__c</fullName>
        <label>Document Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue2__c</fullName>
        <label>Document Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue3__c</fullName>
        <label>Document Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxableValue__c</fullName>
        <label>Document Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dual Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDualCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <description>The due date on matchable lines</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Expense)</relationshipLabel>
        <relationshipName>TransactionLineItemsExpense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (General Ledger Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsGeneralLedgerCurr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountValue__c</fullName>
        <label>General Ledger Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (General Ledger Account)</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsHomeCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxTotal__c</fullName>
        <formula>c2g__HomeTaxValue1__c + c2g__HomeTaxValue2__c + c2g__HomeTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue1__c</fullName>
        <label>Home Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue2__c</fullName>
        <label>Home Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue3__c</fullName>
        <label>Home Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxableValue__c</fullName>
        <label>Home Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                    <label>Not Reportable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IsOutputVATTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox identifies the tax line type i.e. Input VAT Tax or Output VAT Tax</description>
        <label>Is Output VAT Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LineReference__c</fullName>
        <label>Line Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                    <default>true</default>
                    <label>Analysis</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__LocalGLACurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Local GLA Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsLocalGLACurrency</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>